Resolve Overlapping Test 1

--- a/BabaJi_ki_buti/src/index.css
+++ b/BabaJi_ki_buti/src/index.css
@@ -52,6 +52,13 @@ body::-webkit-scrollbar {
   
 }
 
+#smooth-wrapper {
+  overflow: hidden;
+  min-height: 100%;
+}
+#smooth-content {
+  will-change: transform;
+}
 
 
 @layer components {
